--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -107,6 +107,9 @@ h6 {
   & + & {
     margin-left: 30px;
   }
+  &:disabled {
+    filter: grayscale(0.5);
+  }
 }
 
 .mod-btn {
@@ -134,4 +137,8 @@ h6 {
     width: 675px;
     margin-right: 25px;
   }
+}
+
+.app {
+  position: relative;
 }
