--- a/src/components/cards-aside/cards-aside.scss
+++ b/src/components/cards-aside/cards-aside.scss
@@ -1,9 +1,12 @@
 .cards-aside {
+   z-index: 3;
    /* .cards-aside__body */
    &__body {
       box-shadow: 0px 0px 20px 0px #00000040;
       padding: 25px;
       width: 425px;
+      background-color: #fff;
+      z-index: 2;
    }
    /* .cards-aside__header */
    &__header {
