--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -75,12 +75,11 @@ h6 {
   position: relative;
   font-family: "Roboto Condensed", sans-serif;
   transition: opacity 0.3s;
+  text-transform: uppercase;
+  text-align: center;
   cursor: pointer;
   &:hover {
     opacity: 0.8;
-  }
-  &:nth-of-type(2) {
-    background-color: #5c5c5c;
   }
   &::before {
     border-style: solid;
@@ -109,6 +108,9 @@ h6 {
   }
   &:disabled {
     filter: grayscale(0.5);
+  }
+  &.btn-gray {
+    background-color: #5c5c5c;
   }
 }
 
